--- a/index.html
+++ b/index.html
@@ -3,128 +3,112 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Photo Booth @saphasena68</title>
+<title>Minimal Photo Booth</title>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root{
-  --frame-blue:#bfeeff;
-  --accent-yellow:#ffd54f;
-  --card-bg:#ffffff;
-  --shadow:0 8px 20px rgba(0,0,0,0.15);
-  --radius:18px;
-  --text:#0b3b5a;
+  --blue:#b0e5ff;
+  --yellow:#ffd54f;
   --pink:#ffb6c1;
+  --text:#224455;
 }
 html,body{
-  height:100%;margin:0;
+  margin:0;height:100%;
   font-family:"Quicksand","Kanit",sans-serif;
-  background:#f3f7fb;color:var(--text);
-}
-.wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
-.booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);
-  border-radius:18px;box-shadow:var(--shadow);padding:14px;position:relative;}
-.title{text-align:center;font-weight:700;font-size:18px;margin-bottom:8px;color:var(--text);}
-.frame-preview{
-  width:100%;background:var(--frame-blue);
-  border-radius:20px;
-  padding:10px;box-sizing:border-box;
-  position:relative;overflow:hidden;aspect-ratio:2/3;
+  background:var(--blue);
   display:flex;align-items:center;justify-content:center;
-  border:4px dashed var(--pink);
-}
-#video{width:92%;border-radius:14px;background:black;transform:scaleX(-1);
-       box-shadow:0 0 12px rgba(255,182,193,0.6);}
-.countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
-           font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);
-           text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
-.controls{margin-top:16px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap;}
-#startBtn{
-  background:var(--accent-yellow);
-  border:4px solid #fff;
-  width:100px;height:100px;
-  border-radius:50%;
-  font-size:20px;
-  font-weight:700;
   color:var(--text);
+}
+.booth{
+  width:360px;max-width:90%;
+  background:white;
+  border-radius:24px;
+  box-shadow:0 8px 20px rgba(0,0,0,0.12);
+  padding:18px;
+  display:flex;flex-direction:column;align-items:center;
+}
+.title{font-size:20px;font-weight:700;margin-bottom:12px;color:var(--text);}
+.frame{
+  width:100%;
+  aspect-ratio:3/4;
+  border-radius:18px;
+  overflow:hidden;
+  position:relative;
+  background:var(--pink);
   display:flex;align-items:center;justify-content:center;
-  cursor:pointer;
-  box-shadow:0 4px 12px rgba(0,0,0,0.2);
 }
-#retakeBtn{
-  background:#e6f3ff;
-  color:var(--text);
-  padding:8px 14px;
-  border-radius:14px;
-  border:0;
-  font-weight:600;
+#video{
+  width:100%;height:100%;
+  object-fit:cover;
+  transform:scaleX(-1);
 }
-.thumbs{margin-top:14px;display:flex;flex-direction:column;gap:10px;align-items:center;}
-.thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
-.thumb{
-  width:30%;background:white;border-radius:12px;overflow:hidden;height:80px;
+.countdown{
+  position:absolute;inset:0;
   display:flex;align-items:center;justify-content:center;
-  border:3px solid var(--pink);
-  box-shadow:0 6px 14px rgba(10,30,60,0.1);
-}
-.thumb img{width:100%;height:100%;object-fit:cover;border-radius:12px;}
-.small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
-.actions{display:flex;gap:8px;justify-content:center;margin-top:10px;}
-.download-btn{
-  background:transparent;
-  color:var(--text);
-  padding:10px 18px;
-  border-radius:16px;
-  border:3px solid var(--accent-yellow);
-  font-weight:700;
-  font-size:16px;
-  box-shadow:0 4px 10px rgba(0,0,0,0.1);
-  cursor:pointer;
-}
-.flash {position:absolute;inset:0;background:white;opacity:0;pointer-events:none;transition:opacity 0.2s;z-index:10;}
-.flash.show {opacity:0.8;}
-.final-text{
-  position:absolute;
-  top:4%;
-  left:50%;
-  transform:translateX(-50%);
-  font-size:48px;
-  font-weight:900;
-  color:#ffd54f;
-  text-shadow:0 4px 10px rgba(0,0,0,0.3);
-  opacity:0;
+  font-size:64px;font-weight:900;
+  color:white;text-shadow:0 4px 12px rgba(0,0,0,0.4);
   pointer-events:none;
-  z-index:20;
-  transition:opacity 0.8s ease;
 }
-.final-text.show{opacity:1;}
-@media(min-width:700px){.booth{width:480px;}}
+.flash{
+  position:absolute;inset:0;background:white;
+  opacity:0;transition:opacity 0.25s;
+  pointer-events:none;
+}
+.flash.show{opacity:0.8;}
+.controls{margin-top:18px;display:flex;flex-direction:column;align-items:center;}
+/* ปุ่มชัตเตอร์กลม */
+#shutter{
+  width:90px;height:90px;
+  border-radius:50%;
+  background:radial-gradient(circle at 30% 30%, var(--yellow) 0%, #f0c200 100%);
+  border:6px solid white;
+  box-shadow:0 4px 14px rgba(0,0,0,0.25);
+  cursor:pointer;
+  transition:transform 0.1s;
+}
+#shutter:active{transform:scale(0.92);}
+.thumb-row{
+  margin-top:18px;
+  display:flex;justify-content:space-between;width:100%;
+}
+.thumb{
+  width:32%;aspect-ratio:3/4;
+  border-radius:12px;
+  background:#f7faff;
+  overflow:hidden;
+  border:3px solid var(--pink);
+}
+.thumb img{width:100%;height:100%;object-fit:cover;}
+.actions{margin-top:16px;}
+.download-btn{
+  padding:10px 20px;
+  border:3px solid var(--yellow);
+  border-radius:20px;
+  background:transparent;
+  font-weight:700;
+  color:var(--text);
+  cursor:pointer;
+}
 </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="booth">
-    <div class="title">Photo Booth @saphasena68</div>
-    <div class="frame-preview" id="framePreview">
-      <video id="video" autoplay playsinline></video>
-      <div class="countdown" id="countdown" style="display:none;"></div>
-      <div id="stars"></div>
-      <div class="flash" id="flash"></div>
-      <div class="final-text" id="finalText">Photo Booth</div>
+<div class="booth">
+  <div class="title">Minimal Photo Booth</div>
+  <div class="frame">
+    <video id="video" autoplay playsinline></video>
+    <div class="countdown" id="countdown"></div>
+    <div class="flash" id="flash"></div>
+  </div>
+
+  <div class="controls">
+    <button id="shutter"></button>
+    <div class="thumb-row">
+      <div class="thumb" id="t1"></div>
+      <div class="thumb" id="t2"></div>
+      <div class="thumb" id="t3"></div>
     </div>
-    <div class="controls">
-      <button id="startBtn">กดถ่ายภาพ</button>
-      <button id="retakeBtn">เริ่มใหม่</button>
-    </div>
-    <div class="thumbs">
-      <div class="thumb-row">
-        <div class="thumb" id="t1"><span style="opacity:0.45;">1</span></div>
-        <div class="thumb" id="t2"><span style="opacity:0.45;">2</span></div>
-        <div class="thumb" id="t3"><span style="opacity:0.45;">3</span></div>
-      </div>
-      <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
-      <div class="actions">
-        <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
-      </div>
+    <div class="actions">
+      <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
     </div>
   </div>
 </div>
@@ -132,188 +116,105 @@ html,body{
 <audio id="snapSound" src="https://cdn.jsdelivr.net/gh/naptha/talkdemo/snap.mp3" preload="auto"></audio>
 
 <script>
-(async function(){
+(async ()=>{
   const video=document.getElementById('video');
-  const startBtn=document.getElementById('startBtn');
-  const retakeBtn=document.getElementById('retakeBtn');
-  const countdownEl=document.getElementById('countdown');
+  const shutter=document.getElementById('shutter');
+  const countdown=document.getElementById('countdown');
+  const flash=document.getElementById('flash');
   const thumbs=[t1,t2,t3];
-  const snapSound=document.getElementById('snapSound');
-  const flashEl=document.getElementById('flash');
-  const finalText=document.getElementById('finalText');
-  let captures=[null,null,null];
+  const snap=document.getElementById('snapSound');
+  let captures=[null,null,null], idx=0;
 
-  const starContainer=document.getElementById('stars');
-  function createStars(n=20){
-    for(let i=0;i<n;i++){
-      const star=document.createElement('div');
-      const size=Math.random()*14+6;
-      star.style.width=star.style.height=size+'px';
-      star.style.background='#ffd54f';
-      star.style.clipPath='polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)';
-      star.style.position='absolute';
-      star.style.top=Math.random()*90+'%';
-      star.style.left=Math.random()*90+'%';
-      star.style.opacity=0.9;
-      starContainer.appendChild(star);
+  // เปิดกล้อง
+  try{
+    const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"}});
+    video.srcObject=stream;
+  }catch(e){alert("ไม่สามารถเปิดกล้องได้");}
+
+  function capture(){
+    const c=document.createElement('canvas');
+    c.width=video.videoWidth; c.height=video.videoHeight;
+    const ctx=c.getContext('2d');
+    ctx.translate(c.width,0);ctx.scale(-1,1);
+    ctx.drawImage(video,0,0,c.width,c.height);
+    return c.toDataURL("image/png");
+  }
+
+  async function takeShot(){
+    if(idx>=3) return;
+    for(let i=3;i>0;i--){
+      countdown.textContent=i;
+      await new Promise(r=>setTimeout(r,700));
     }
-  }
-  createStars(20);
-
-  async function startCamera(){
-    try{
-      const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"},audio:false});
-      video.srcObject=stream; await video.play();
-    }catch(err){alert('เปิดกล้องไม่สำเร็จ');}
-  }
-  await startCamera();
-
-  function showCountdown(n){countdownEl.style.display='flex';countdownEl.textContent=n;}
-  function hideCountdown(){countdownEl.style.display='none';}
-
-  function captureFrame(){
-    const vw=video.videoWidth,vh=video.videoHeight;
-    const canvas=document.createElement('canvas');
-    canvas.width=vw;canvas.height=vh;
-    const ctx=canvas.getContext('2d');
-    ctx.translate(vw,0);ctx.scale(-1,1);
-    ctx.drawImage(video,0,0,vw,vh);
-    return canvas.toDataURL('image/png');
-  }
-  function playSnap(){
-    snapSound.currentTime=0;
-    snapSound.play().catch(()=>{});
-    flashEl.classList.add('show');
-    setTimeout(()=>flashEl.classList.remove('show'),150);
+    countdown.textContent="";
+    snap.play().catch(()=>{});
+    flash.classList.add("show");
+    setTimeout(()=>flash.classList.remove("show"),200);
+    const img=capture();
+    captures[idx]=img;
+    thumbs[idx].innerHTML=`<img src="${img}">`;
+    idx++;
   }
 
-  async function takeShots(){
-    startBtn.disabled=true;retakeBtn.disabled=true;
-    captures=[null,null,null];
-    finalText.classList.remove('show');
-    thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
-    for(let i=0;i<3;i++){
-      for(let s=3;s>=1;s--){showCountdown(s);await new Promise(r=>setTimeout(r,800));}
-      hideCountdown();
-      const data=captureFrame();
-      captures[i]=data;
-      playSnap();
-      thumbs[i].innerHTML=`<img src="${data}">`;
-      await new Promise(r=>setTimeout(r,400));
-    }
-    finalText.classList.add('show');
-    setTimeout(()=>finalText.classList.remove('show'),3000);
-    startBtn.disabled=false;retakeBtn.disabled=false;
-  }
-  startBtn.addEventListener('click',takeShots);
-  retakeBtn.addEventListener('click',()=>{
-    captures=[null,null,null];
-    finalText.classList.remove('show');
-    thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
-  });
+  shutter.addEventListener('click',takeShot);
 
-  // =======  Export 4x6 : 3 ช่อง + ดาว/เมฆพาสเทล =======
-  function roundRect(ctx,x,y,w,h,r,fill,stroke){
-    ctx.beginPath();
-    ctx.moveTo(x+r,y);
-    ctx.arcTo(x+w,y,x+w,y+h,r);
-    ctx.arcTo(x+w,y+h,x,y+h,r);
-    ctx.arcTo(x,y+h,x,y,r);
-    ctx.arcTo(x,y,x+w,y,r);
-    ctx.closePath();
-    if(fill)ctx.fill();
-    if(stroke)ctx.stroke();
-  }
-  function drawImageInFrame(ctx,imgSrc,x,y,w,h,r){
-    return new Promise((resolve,reject)=>{
-      const img=new Image();
-      img.onload=function(){
-        ctx.save();roundRect(ctx,x,y,w,h,r,false,false);ctx.clip();
-        const ratio=Math.max(w/img.width,h/img.height);
-        const nw=img.width*ratio,nh=img.height*ratio;
-        const dx=x+(w-nw)/2,dy=y+(h-nh)/2;
-        ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();resolve();
-      };
-      img.onerror=reject;img.src=imgSrc;
-    });
-  }
-  function drawStar(ctx,x,y,r,color){
-    ctx.save();ctx.fillStyle=color;ctx.beginPath();
-    for(let i=0;i<5;i++){
-      const a=(Math.PI*2*i)/5-Math.PI/2;
-      ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);
-      const ia=a+Math.PI/5;
-      ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);
-    }
-    ctx.closePath();ctx.fill();ctx.restore();
-  }
-  function drawCloud(ctx,x,y,w,h,color){
-    ctx.save();ctx.fillStyle=color;
-    ctx.beginPath();
-    const r=h/2;
-    ctx.arc(x+w*0.25,y+r,r,Math.PI*0.5,Math.PI*1.5);
-    ctx.arc(x+w*0.5,y+r*0.7,r*0.8,Math.PI*0.5,Math.PI*1.5);
-    ctx.arc(x+w*0.75,y+r,r,Math.PI*0.5,Math.PI*1.5);
-    ctx.closePath();
-    ctx.fill();
-    ctx.restore();
-  }
-
+  // ดาวน์โหลดรวม 3 ช่อง (พื้นหลังฟ้า/เหลือง/ชมพู minimal)
   document.getElementById('downloadBtn').addEventListener('click',async()=>{
-    if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
-    const finalW=1200,finalH=1800;
-    const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
-    const ctx=canvas.getContext('2d');
+    if(!captures.some(Boolean)){alert('ยังไม่ได้ถ่าย');return;}
+    const w=1200,h=1800;
+    const c=document.createElement('canvas');
+    c.width=w; c.height=h;
+    const ctx=c.getContext('2d');
+    ctx.fillStyle="#b0e5ff";
+    ctx.fillRect(0,0,w,h);
 
-    // พื้นหลังฟ้า
-    ctx.fillStyle='#bfeeff';
-    ctx.fillRect(0,0,finalW,finalH);
-
-    // กรอบสีขาว
-    const margin=60,innerX=margin,innerY=margin+60;
-    const innerW=finalW-margin*2,innerH=finalH-innerY-margin;
-    ctx.fillStyle='#fff';
-    roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
-
-    // ชื่อด้านบน
-    ctx.fillStyle='#08324d';
-    ctx.font='900 64px Quicksand';
-    ctx.textAlign='center';
-    ctx.textBaseline='middle';
-    ctx.fillText('Photo Booth',finalW/2,margin+25);
-
-    // วาด 3 ช่อง
-    const gutter=24,photoX=innerX+28,photoW=innerW-56;
-    const singleH=Math.floor((innerH-gutter*2-56)/3);
-    let y=innerY+28;
+    // 3 ช่อง
+    const margin=60,gap=30;
+    const boxW=w-2*margin, boxH=(h-2*margin - 2*gap)/3;
     for(let i=0;i<3;i++){
-      ctx.fillStyle='#e9f6ff';
-      roundRect(ctx,photoX,y,photoW,singleH,16,true,false);
-      if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,16);
-      ctx.strokeStyle='#fff';ctx.lineWidth=8;
-      roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,14,false,true);
-      y+=singleH+gutter;
-    }
-
-    // ดาว/เมฆตกแต่ง
-    const colors=['#ffd54f','#ffb6c1','#fff0aa','#ffe0f0'];
-    for(let i=0;i<35;i++){
-      const r=Math.random()*20+6;
-      const x=Math.random()*finalW;
-      const yPos=Math.random()*finalH;
-      if(x>photoX-40 && x<photoX+photoW+40 && yPos>innerY-20 && yPos<innerY+innerH+20) continue;
-      if(Math.random()<0.7){
-        drawStar(ctx,x,yPos,r,colors[Math.floor(Math.random()*colors.length)]);
-      }else{
-        drawCloud(ctx,x,yPos,r*3,r*1.5,colors[Math.floor(Math.random()*colors.length)]);
+      const y=margin + i*(boxH+gap);
+      ctx.fillStyle="#ffffff";
+      ctx.roundRect(margin,y,boxW,boxH,20);
+      ctx.fill();
+      if(captures[i]){
+        const img=await loadImg(captures[i]);
+        const ratio=Math.max(boxW/img.width, boxH/img.height);
+        const iw=img.width*ratio, ih=img.height*ratio;
+        ctx.drawImage(img,margin+(boxW-iw)/2,y+(boxH-ih)/2,iw,ih);
       }
     }
 
+    // ดาว/เมฆแบบมินิมัล
+    const colors=["#ffd54f","#ffb6c1","#ffffff99"];
+    for(let i=0;i<20;i++){
+      ctx.save();
+      ctx.fillStyle=colors[Math.floor(Math.random()*colors.length)];
+      const x=Math.random()*w, y=Math.random()*h, r=Math.random()*15+5;
+      ctx.beginPath();
+      for(let j=0;j<5;j++){
+        const a=(Math.PI*2*j)/5 - Math.PI/2;
+        ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);
+        const ia=a+Math.PI/5;
+        ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);
+      }
+      ctx.closePath();ctx.fill();
+      ctx.restore();
+    }
+
     const a=document.createElement('a');
-    a.href=canvas.toDataURL('image/png');
-    a.download='photobooth_3shots.png';
+    a.href=c.toDataURL("image/png");
+    a.download="minimal_photobooth.png";
     a.click();
   });
+
+  function loadImg(src){
+    return new Promise((res,rej)=>{
+      const i=new Image();
+      i.onload=()=>res(i);
+      i.onerror=rej;
+      i.src=src;
+    });
+  }
 })();
 </script>
 </body>
