--- a/index.html
+++ b/index.html
@@ -3,39 +3,44 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Minimal Photo Booth</title>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+<title>Photo Booth</title>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
 <style>
 :root{
   --blue:#b0e5ff;
   --yellow:#ffd54f;
   --pink:#ffb6c1;
-  --text:#224455;
+  --text:#223344;
 }
 html,body{
   margin:0;height:100%;
-  font-family:"Quicksand","Kanit",sans-serif;
   background:var(--blue);
   display:flex;align-items:center;justify-content:center;
-  color:var(--text);
+  font-family:"Quicksand",sans-serif;
 }
 .booth{
-  width:360px;max-width:90%;
+  width:380px;max-width:90%;
   background:white;
+  border:8px solid var(--pink);
   border-radius:24px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.12);
+  box-shadow:0 8px 18px rgba(0,0,0,0.15);
   padding:18px;
-  display:flex;flex-direction:column;align-items:center;
+  text-align:center;
 }
-.title{font-size:20px;font-weight:700;margin-bottom:12px;color:var(--text);}
+.title{
+  font-size:22px;
+  font-weight:700;
+  margin-bottom:12px;
+  color:var(--text);
+}
 .frame{
   width:100%;
   aspect-ratio:3/4;
-  border-radius:18px;
+  border-radius:20px;
+  border:6px solid var(--yellow);
   overflow:hidden;
   position:relative;
-  background:var(--pink);
-  display:flex;align-items:center;justify-content:center;
+  background:#eee;
 }
 #video{
   width:100%;height:100%;
@@ -47,16 +52,13 @@ html,body{
   display:flex;align-items:center;justify-content:center;
   font-size:64px;font-weight:900;
   color:white;text-shadow:0 4px 12px rgba(0,0,0,0.4);
-  pointer-events:none;
 }
 .flash{
   position:absolute;inset:0;background:white;
   opacity:0;transition:opacity 0.25s;
-  pointer-events:none;
 }
 .flash.show{opacity:0.8;}
-.controls{margin-top:18px;display:flex;flex-direction:column;align-items:center;}
-/* ปุ่มชัตเตอร์กลม */
+.controls{margin-top:16px;}
 #shutter{
   width:90px;height:90px;
   border-radius:50%;
@@ -74,13 +76,13 @@ html,body{
 .thumb{
   width:32%;aspect-ratio:3/4;
   border-radius:12px;
-  background:#f7faff;
+  border:4px solid var(--pink);
   overflow:hidden;
-  border:3px solid var(--pink);
+  background:#fafafa;
 }
 .thumb img{width:100%;height:100%;object-fit:cover;}
-.actions{margin-top:16px;}
 .download-btn{
+  margin-top:16px;
   padding:10px 20px;
   border:3px solid var(--yellow);
   border-radius:20px;
@@ -93,13 +95,12 @@ html,body{
 </head>
 <body>
 <div class="booth">
-  <div class="title">Minimal Photo Booth</div>
+  <div class="title">Photo Booth</div>
   <div class="frame">
     <video id="video" autoplay playsinline></video>
     <div class="countdown" id="countdown"></div>
     <div class="flash" id="flash"></div>
   </div>
-
   <div class="controls">
     <button id="shutter"></button>
     <div class="thumb-row">
@@ -107,9 +108,7 @@ html,body{
       <div class="thumb" id="t2"></div>
       <div class="thumb" id="t3"></div>
     </div>
-    <div class="actions">
-      <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
-    </div>
+    <button id="downloadBtn" class="download-btn">ดาวน์โหลด</button>
   </div>
 </div>
 
@@ -123,7 +122,7 @@ html,body{
   const flash=document.getElementById('flash');
   const thumbs=[t1,t2,t3];
   const snap=document.getElementById('snapSound');
-  let captures=[null,null,null], idx=0;
+  let captures=[null,null,null];
 
   // เปิดกล้อง
   try{
@@ -140,42 +139,54 @@ html,body{
     return c.toDataURL("image/png");
   }
 
-  async function takeShot(){
-    if(idx>=3) return;
-    for(let i=3;i>0;i--){
-      countdown.textContent=i;
-      await new Promise(r=>setTimeout(r,700));
+  // ถ่าย 3 ช็อตต่อเนื่อง
+  async function takeThreeShots(){
+    captures=[null,null,null];
+    for(let i=0;i<3;i++){
+      for(let j=3;j>0;j--){
+        countdown.textContent=j;
+        await new Promise(r=>setTimeout(r,600));
+      }
+      countdown.textContent="";
+      snap.play().catch(()=>{});
+      flash.classList.add("show");
+      setTimeout(()=>flash.classList.remove("show"),200);
+      const img=capture();
+      captures[i]=img;
+      thumbs[i].innerHTML=`<img src="${img}">`;
+      if(i<2) await new Promise(r=>setTimeout(r,1000)); // เว้น 1 วิ
     }
-    countdown.textContent="";
-    snap.play().catch(()=>{});
-    flash.classList.add("show");
-    setTimeout(()=>flash.classList.remove("show"),200);
-    const img=capture();
-    captures[idx]=img;
-    thumbs[idx].innerHTML=`<img src="${img}">`;
-    idx++;
   }
+  shutter.addEventListener('click',takeThreeShots);
 
-  shutter.addEventListener('click',takeShot);
-
-  // ดาวน์โหลดรวม 3 ช่อง (พื้นหลังฟ้า/เหลือง/ชมพู minimal)
   document.getElementById('downloadBtn').addEventListener('click',async()=>{
-    if(!captures.some(Boolean)){alert('ยังไม่ได้ถ่าย');return;}
+    if(!captures[0]){alert('ยังไม่ได้ถ่าย');return;}
     const w=1200,h=1800;
     const c=document.createElement('canvas');
     c.width=w; c.height=h;
     const ctx=c.getContext('2d');
+
+    // พื้นหลัง + กรอบ
     ctx.fillStyle="#b0e5ff";
     ctx.fillRect(0,0,w,h);
+    ctx.lineWidth=20;
+    ctx.strokeStyle="#ffb6c1";
+    ctx.strokeRect(10,10,w-20,h-20);
 
-    // 3 ช่อง
-    const margin=60,gap=30;
-    const boxW=w-2*margin, boxH=(h-2*margin - 2*gap)/3;
+    // หัวเรื่อง
+    ctx.fillStyle="#223344";
+    ctx.font="bold 64px Quicksand";
+    ctx.textAlign="center";
+    ctx.fillText("Photo Booth", w/2, 90);
+
+    // 3 ช่องรูป
+    const margin=60, gap=40;
+    const boxW=w-2*margin, boxH=(h-200 - 2*gap)/3;
     for(let i=0;i<3;i++){
-      const y=margin + i*(boxH+gap);
-      ctx.fillStyle="#ffffff";
-      ctx.roundRect(margin,y,boxW,boxH,20);
-      ctx.fill();
+      const y=140 + i*(boxH+gap);
+      ctx.strokeStyle="#ffd54f";
+      ctx.lineWidth=12;
+      ctx.strokeRect(margin,y,boxW,boxH);
       if(captures[i]){
         const img=await loadImg(captures[i]);
         const ratio=Math.max(boxW/img.width, boxH/img.height);
@@ -184,26 +195,9 @@ html,body{
       }
     }
 
-    // ดาว/เมฆแบบมินิมัล
-    const colors=["#ffd54f","#ffb6c1","#ffffff99"];
-    for(let i=0;i<20;i++){
-      ctx.save();
-      ctx.fillStyle=colors[Math.floor(Math.random()*colors.length)];
-      const x=Math.random()*w, y=Math.random()*h, r=Math.random()*15+5;
-      ctx.beginPath();
-      for(let j=0;j<5;j++){
-        const a=(Math.PI*2*j)/5 - Math.PI/2;
-        ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);
-        const ia=a+Math.PI/5;
-        ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);
-      }
-      ctx.closePath();ctx.fill();
-      ctx.restore();
-    }
-
     const a=document.createElement('a');
     a.href=c.toDataURL("image/png");
-    a.download="minimal_photobooth.png";
+    a.download="photo_booth.png";
     a.click();
   });
 
